--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -2,5 +2,14 @@
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/employee
 spring.datasource.username = root
 spring.datasource.password = Repent@78526
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.main.banner-mode=off
+spring.output.ansi.enabled=ALWAYS
+
+logging.file.name=Logs/EmployeeApp.log
+logging.pattern.rolling-file-name=EmployeeApp-%d{yyyy-MM-dd}.%i.log
+logging.file.max-size=1MB
+logging.file.total-size-cap=10MB
+logging.file.max-history=5
+logging.file.clean-history-on-start=true
